# schemax

./: .editorconfig  .gitignore  CLAUDE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sandbox.py  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
schemax/: __init__.py  __main__.py  _config.py  _data_collector.py  _from_json_schema.py  _generator.py  _interface.py  _openapi_normalizer.py  _translator.py  _version.py  sandbox.py  supported_props.py
schemax/templates/: api_route.py.j2  interfaces.py.j2  scenario.py.j2  schema_definition.py.j2  schemas.py.j2
tests/: test_data_collector.py  test_from_json_schema.py  test_to_json_schema.py
