[project]
name = "schemax"
dynamic = ["version"]
description = "d42 to JSON-Schema translator and vise versa"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Nikita Mikheev", email = "thelol1mpo@gmail.com"}
]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed"
]
dependencies = [
    "d42>=2.0.0,<3.0.0",
    "district42-exp-types>=1.0.0,<2.0.0",
    "jinja2>=3.1.5,<4.0.0",
    "niltype>=0.3.4,<2.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "referencing>=0.35.1,<1.0.0",
    "vedro>=1.0.0,<2.0.0",
    "vedro-httpx>=0.0.1,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/Lolimpo/schemax"
Repository = "https://github.com/Lolimpo/schemax"

[project.scripts]
schemax = "schemax.__main__:main"

[dependency-groups]
dev = [
    "baby-steps==1.3.1",
    "coverage==7.6.10",
    "types-jsonschema==4.25.1.20251009",
    "types-pyyaml==6.0.12.20250915",
    "pytest==8.3.4",
    "mypy==1.18.2",
    "ruff==0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemax"]

[tool.hatch.build.targets.wheel.shared-data]
"schemax/py.typed" = "schemax/py.typed"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "schemax/__version__.py"
